Parser/MisakaParser.java
// Generated from C:/Users/DolphinAuditore/workspace/Misaka/src/Parser\Misaka.g4 by ANTLR 4.5.1
package Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MisakaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NULL=1, Break=2, Continue=3, Else=4, For=5, If=6, Int=7, String=8, New=9, 
		Return=10, Class=11, Void=12, While=13, LP=14, RP=15, LK=16, RK=17, LB=18, 
		RB=19, Less=20, LessEqual=21, Greater=22, GreaterEqual=23, LeftShift=24, 
		RightShift=25, Plus=26, PlusPlus=27, Minus=28, MinusMinus=29, Star=30, 
		Div=31, Mod=32, And=33, Or=34, AndAnd=35, OrOr=36, Caret=37, Not=38, Tilde=39, 
		Question=40, Colon=41, Semi=42, Comma=43, Assign=44, Equal=45, NotEqual=46, 
		Dot=47, ID=48, INT_LITERAL=49, STRING_LITERAL=50, Whitespace=51, Newline=52, 
		BlockComment=53, LineComment=54;
	public static final int
		RULE_expr = 0, RULE_assignment_expr = 1, RULE_log_or_expr = 2, RULE_log_and_expr = 3, 
		RULE_inclusive_or_expr = 4, RULE_exclusive_or_expr = 5, RULE_and_expr = 6, 
		RULE_equal_expr = 7, RULE_relation_expr = 8, RULE_shift_expr = 9, RULE_add_expr = 10, 
		RULE_multi_expr = 11, RULE_new_expr = 12, RULE_dim_expr = 13, RULE_type = 14, 
		RULE_unary_expr = 15, RULE_postfix_expr = 16, RULE_argument_expr_list = 17, 
		RULE_primary_expr = 18, RULE_stmt = 19, RULE_compound_stmt = 20, RULE_blockItem_list = 21, 
		RULE_blockItem = 22, RULE_expr_stmt = 23, RULE_select_stmt = 24, RULE_iter_stmt = 25, 
		RULE_jump_stmt = 26, RULE_declaration = 27, RULE_init_decl = 28, RULE_decl = 29, 
		RULE_identifierList = 30, RULE_initializer = 31, RULE_initializer_list = 32, 
		RULE_compilation_unit = 33, RULE_translation_unit = 34, RULE_external_declaration = 35, 
		RULE_class_def = 36, RULE_function_def = 37;
	public static final String[] ruleNames = {
		"expr", "assignment_expr", "log_or_expr", "log_and_expr", "inclusive_or_expr", 
		"exclusive_or_expr", "and_expr", "equal_expr", "relation_expr", "shift_expr", 
		"add_expr", "multi_expr", "new_expr", "dim_expr", "type", "unary_expr", 
		"postfix_expr", "argument_expr_list", "primary_expr", "stmt", "compound_stmt", 
		"blockItem_list", "blockItem", "expr_stmt", "select_stmt", "iter_stmt", 
		"jump_stmt", "declaration", "init_decl", "decl", "identifierList", "initializer", 
		"initializer_list", "compilation_unit", "translation_unit", "external_declaration", 
		"class_def", "function_def"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'NULL'", "'break'", "'continue'", "'else'", "'for'", "'if'", "'int'", 
		"'string'", "'new'", "'return'", "'class'", "'void'", "'while'", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'<<'", 
		"'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'&'", null, 
		"'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", "':'", "';'", "','", "'='", 
		"'=='", "'!='", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NULL", "Break", "Continue", "Else", "For", "If", "Int", "String", 
		"New", "Return", "Class", "Void", "While", "LP", "RP", "LK", "RK", "LB", 
		"RB", "Less", "LessEqual", "Greater", "GreaterEqual", "LeftShift", "RightShift", 
		"Plus", "PlusPlus", "Minus", "MinusMinus", "Star", "Div", "Mod", "And", 
		"Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", "Question", "Colon", 
		"Semi", "Comma", "Assign", "Equal", "NotEqual", "Dot", "ID", "INT_LITERAL", 
		"STRING_LITERAL", "Whitespace", "Newline", "BlockComment", "LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Misaka.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MisakaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Expr_to_assignContext extends ExprContext {
		public Assignment_exprContext assignment_expr() {
			return getRuleContext(Assignment_exprContext.class,0);
		}
		public Expr_to_assignContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).enterExpr_to_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).exitExpr_to_assign(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expr);
		try {
			_localctx = new Expr_to_assignContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			assignment_expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assignment_exprContext extends ParserRuleContext {
		public Assignment_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_expr; }
	 
		public Assignment_exprContext() { }
		public void copyFrom(Assignment_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Assign_to_logorContext extends Assignment_exprContext {
		public Log_or_exprContext log_or_expr() {
			return getRuleContext(Log_or_exprContext.class,0);
		}
		public Assign_to_logorContext(Assignment_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).enterAssign_to_logor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).exitAssign_to_logor(this);
		}
	}
	public static class Assign_defContext extends Assignment_exprContext {
		public Unary_exprContext unary_expr() {
			return getRuleContext(Unary_exprContext.class,0);
		}
		public TerminalNode Assign() { return getToken(MisakaParser.Assign, 0); }
		public Assignment_exprContext assignment_expr() {
			return getRuleContext(Assignment_exprContext.class,0);
		}
		public Assign_defContext(Assignment_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).enterAssign_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).exitAssign_def(this);
		}
	}

	public final Assignment_exprContext assignment_expr() throws RecognitionException {
		Assignment_exprContext _localctx = new Assignment_exprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_assignment_expr);
		try {
			setState(83);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new Assign_to_logorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				log_or_expr(0);
				}
				break;
			case 2:
				_localctx = new Assign_defContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				unary_expr();
				setState(80);
				match(Assign);
				setState(81);
				assignment_expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Log_or_exprContext extends ParserRuleContext {
		public Log_or_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_log_or_expr; }
	 
		public Log_or_exprContext() { }
		public void copyFrom(Log_or_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Logor_to_logandContext extends Log_or_exprContext {
		public Log_and_exprContext log_and_expr() {
			return getRuleContext(Log_and_exprContext.class,0);
		}
		public Logor_to_logandContext(Log_or_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).enterLogor_to_logand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).exitLogor_to_logand(this);
		}
	}
	public static class Or_defContext extends Log_or_exprContext {
		public Log_or_exprContext log_or_expr() {
			return getRuleContext(Log_or_exprContext.class,0);
		}
		public TerminalNode OrOr() { return getToken(MisakaParser.OrOr, 0); }
		public Log_and_exprContext log_and_expr() {
			return getRuleContext(Log_and_exprContext.class,0);
		}
		public Or_defContext(Log_or_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).enterOr_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).exitOr_def(this);
		}
	}

	public final Log_or_exprContext log_or_expr() throws RecognitionException {
		return log_or_expr(0);
	}

	private Log_or_exprContext log_or_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Log_or_exprContext _localctx = new Log_or_exprContext(_ctx, _parentState);
		Log_or_exprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_log_or_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Logor_to_logandContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(86);
			log_and_expr(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(93);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Or_defContext(new Log_or_exprContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_log_or_expr);
					setState(88);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(89);
					match(OrOr);
					setState(90);
					log_and_expr(0);
					}
					} 
				}
				setState(95);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Log_and_exprContext extends ParserRuleContext {
		public Log_and_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_log_and_expr; }
	 
		public Log_and_exprContext() { }
		public void copyFrom(Log_and_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Logand_to_incorContext extends Log_and_exprContext {
		public Inclusive_or_exprContext inclusive_or_expr() {
			return getRuleContext(Inclusive_or_exprContext.class,0);
		}
		public Logand_to_incorContext(Log_and_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).enterLogand_to_incor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).exitLogand_to_incor(this);
		}
	}
	public static class Logand_defContext extends Log_and_exprContext {
		public Log_and_exprContext log_and_expr() {
			return getRuleContext(Log_and_exprContext.class,0);
		}
		public TerminalNode AndAnd() { return getToken(MisakaParser.AndAnd, 0); }
		public Inclusive_or_exprContext inclusive_or_expr() {
			return getRuleContext(Inclusive_or_exprContext.class,0);
		}
		public Logand_defContext(Log_and_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).enterLogand_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).exitLogand_def(this);
		}
	}

	public final Log_and_exprContext log_and_expr() throws RecognitionException {
		return log_and_expr(0);
	}

	private Log_and_exprContext log_and_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Log_and_exprContext _localctx = new Log_and_exprContext(_ctx, _parentState);
		Log_and_exprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_log_and_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Logand_to_incorContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(97);
			inclusive_or_expr(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Logand_defContext(new Log_and_exprContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_log_and_expr);
					setState(99);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(100);
					match(AndAnd);
					setState(101);
					inclusive_or_expr(0);
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Inclusive_or_exprContext extends ParserRuleContext {
		public Inclusive_or_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inclusive_or_expr; }
	 
		public Inclusive_or_exprContext() { }
		public void copyFrom(Inclusive_or_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Incor_to_exlorContext extends Inclusive_or_exprContext {
		public Exclusive_or_exprContext exclusive_or_expr() {
			return getRuleContext(Exclusive_or_exprContext.class,0);
		}
		public Incor_to_exlorContext(Inclusive_or_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).enterIncor_to_exlor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).exitIncor_to_exlor(this);
		}
	}
	public static class Incor_defContext extends Inclusive_or_exprContext {
		public Inclusive_or_exprContext inclusive_or_expr() {
			return getRuleContext(Inclusive_or_exprContext.class,0);
		}
		public TerminalNode Or() { return getToken(MisakaParser.Or, 0); }
		public Exclusive_or_exprContext exclusive_or_expr() {
			return getRuleContext(Exclusive_or_exprContext.class,0);
		}
		public Incor_defContext(Inclusive_or_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).enterIncor_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).exitIncor_def(this);
		}
	}

	public final Inclusive_or_exprContext inclusive_or_expr() throws RecognitionException {
		return inclusive_or_expr(0);
	}

	private Inclusive_or_exprContext inclusive_or_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Inclusive_or_exprContext _localctx = new Inclusive_or_exprContext(_ctx, _parentState);
		Inclusive_or_exprContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_inclusive_or_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Incor_to_exlorContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(108);
			exclusive_or_expr(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(115);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Incor_defContext(new Inclusive_or_exprContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_inclusive_or_expr);
					setState(110);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(111);
					match(Or);
					setState(112);
					exclusive_or_expr(0);
					}
					} 
				}
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Exclusive_or_exprContext extends ParserRuleContext {
		public Exclusive_or_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exclusive_or_expr; }
	 
		public Exclusive_or_exprContext() { }
		public void copyFrom(Exclusive_or_exprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Exlor_to_andContext extends Exclusive_or_exprContext {
		public And_exprContext and_expr() {
			return getRuleContext(And_exprContext.class,0);
		}
		public Exlor_to_andContext(Exclusive_or_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).enterExlor_to_and(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).exitExlor_to_and(this);
		}
	}
	public static class Exlor_defContext extends Exclusive_or_exprContext {
		public Exclusive_or_exprContext exclusive_or_expr() {
			return getRuleContext(Exclusive_or_exprContext.class,0);
		}
		public TerminalNode Caret() { return getToken(MisakaParser.Caret, 0); }
		public And_exprContext and_expr() {
			return getRuleContext(And_exprContext.class,0);
		}
		public Exlor_defContext(Exclusive_or_exprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).enterExlor_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MisakaListener ) ((MisakaListener)listener).exitExlor_def(this);
		}
	}

	public final Exclusive_or_exprContext exclusive_or_expr() throws RecognitionException {
		return exclusive_or_expr(0);
	}

	private Exclusive_or_exprContext exclusive_or_expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Exclusive_or_exprContext _localctx = new Exclusive_or_exprContext(_ctx, _parentState);
		Exclusive_or_exprContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_exclusive_or_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Exlor_to_andContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(119);
			and_expr(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(126);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Exlor_defContext(new Exclusive_or_exprContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_exclusive_or_expr);
					setState(121);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(122);
					match(Caret);
					setState(123);
					and_expr(0);
					}
					} 
				}
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
